derive/tests/fail/01-too-many-lifetimes.stderr
error: At most 5 lifetime parameters are allowed!
 --> tests/fail/01-too-many-lifetimes.rs:5:30
  |
5 | struct S<'a, 'b, 'c, 'd, 'e, 'f, T> {
  |                              ^^
